@@ -1,3 +1,8 @@
+2025-12-30  Dirk Eddelbuettel  <edd@debian.org>
+
+	* tests/tinytest.R: Refine decision of when not to run all tests even
+	when development version number is seen
+
 2025-12-28  Dirk Eddelbuettel  <edd@debian.org>
 
 	* README.md: Replace installation from drat section with r-universe
